Refactor job name generation in config generator and update job config method to include database name

--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -20,7 +20,7 @@ starRocks:
 schema: "dbo"
 
 # Optional: job name for organizing output
-jobName: "tls_data_sync"
+jobName: ""
 
 # Flink checkpoint and savepoint configuration
 flink:
