--- a/.github/workflows/pr-rules.yml
+++ b/.github/workflows/pr-rules.yml
@@ -8,8 +8,10 @@ jobs:
   title-check:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          if [[ ! "${{ github.event.pull_request.title }}" =~ (TASK|BUG|FEATURE)-[0-9]+ ]]; then
-            echo "❌ PR title must include ticket ID (JIRA-123)"
+      - name: Validate PR title
+        run: |
+          TITLE="${{ github.event.pull_request.title }}"
+          if [[ ! "$TITLE" =~ (TASK|JIRA|FEATURE|BUG)-[0-9]+ ]]; then
+            echo "❌ PR title must include ticket ID (e.g. FLINK-123)"
             exit 1
           fi
