--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -1,18 +1,22 @@
-name: Lint
+name: TypeCheck
 
 on:
   pull_request:
     branches: [ main ]
 
 jobs:
-  eslint:
+  typecheck:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - run: yarn install --frozen-lockfile
-      - run: yarn workspaces run lint
+      - name: Install dependencies
+        run: npm ci
+
+      - name: TypeScript type check
+        run: npx tsc --noEmit
